[gd_scene load_steps=2 format=3 uid="uid://b0j054ksup36n"]

[ext_resource type="Script" uid="uid://bevsvbn2ox4im" path="res://scripts/ui/chest_ui.gd" id="1_script"]

[node name="ChestUI" type="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 40.0
alignment = 2

[node name="CloseButton" type="Button" parent="Panel/Header"]
layout_mode = 2
text = " X "

[node name="ChestLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 33.0
text = "Chest"

[node name="ChestScroll" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 380.0
offset_bottom = 140.0

[node name="ChestGrid" type="GridContainer" parent="Panel/ChestScroll"]
layout_mode = 2
columns = 10

[node name="PlayerLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 150.0
offset_right = 100.0
offset_bottom = 173.0
text = "Inventory"

[node name="PlayerScroll" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 180.0
offset_right = 380.0
offset_bottom = 280.0

[node name="PlayerGrid" type="GridContainer" parent="Panel/PlayerScroll"]
layout_mode = 2
columns = 10
